# src/AccountsReceivable/domain/requests/DeclareInstallmentPayment.request.ts
@@ -1,11 +1,9 @@
 export type DeclareInstallmentPaymentRequest = {
   accountReceivableId: string
   installmentId: string
-  debtorDNI: string
+  memberId: string
   availabilityAccountId: string
   amount: number
   voucher?: string
-  file?: any
-  churchId: string
-  createdBy: string
+  file: any
 }
